# ironPosh

./: .gitignore  CLAUDE.md  Cargo.toml  IRONWINRM_WEB_RECORD_TEST_MATRIX.md  IRONWINRM_WEB_TDD_PLAN.md  README.md  TAP_COMPLETION_WIP_MUST_READ.md  WASM_PSRP_PROD_PLAN.md  all.txt  failed-sspi.txt  flattened_files.txt  ironposh.txt  powershell_design.md
crates/ironposh-async/: Cargo.toml
crates/ironposh-async/examples/: serial_latency_bench.rs
crates/ironposh-async/src/: client.rs  clock.rs  connection.rs  lib.rs  session.rs  session_serial.rs
crates/ironposh-async/src/session_serial/: core.rs  mod.rs  scheduler.rs
crates/ironposh-client-core/: Cargo.toml
crates/ironposh-client-core/examples/: auth_sequence.rs  borrow_diagram.md  borrow_issue.rs  sspi.rs
crates/ironposh-client-core/examples/connect/: config.rs  connection.rs  http_client.rs  main.rs  mod.rs  network.rs  user_input.rs
crates/ironposh-client-core/src/: credentials.rs  lib.rs  pipeline.rs  powershell.rs  psrp_record.rs
crates/ironposh-client-core/src/connector/: active_session.rs  auth_sequence.rs  authenticator.rs  config.rs  connection_pool.rs  conntion_pool.rs  encryption.rs  http.rs  mod.rs
crates/ironposh-client-core/src/host/: conversions.rs  error.rs  host_call.rs  methods.rs  mod.rs  params.rs  returns.rs  snapshot_test.rs  test.rs  traits.rs  transports.rs  types.rs
crates/ironposh-client-core/src/runspace/: win_rs.rs
crates/ironposh-client-core/src/runspace_pool/: creator.rs  crypto.rs  enums.rs  expect_shell_connected.rs  expect_shell_created.rs  host_call.rs  incoming.rs  mod.rs  pool.rs  requests.rs  types.rs
crates/ironposh-client-core/test_data/: real_encrypted_soap.txt
crates/ironposh-client-core/tests/: connector_handshake.rs  test_send_roundtrip.rs
crates/ironposh-client-core/tests/resources/: resource_created.xml
crates/ironposh-client-core/tests/support/: mod.rs
crates/ironposh-client-sync/: Cargo.toml
crates/ironposh-client-sync/src/: auth_handler.rs  config.rs  connection.rs  http_client.rs  kerberos.rs  main.rs  network.rs  types.rs  ui_handler.rs  user_input.rs
crates/ironposh-client-tokio/: Cargo.toml  README.md
crates/ironposh-client-tokio/src/: config.rs  gateway_http_client.rs  hostcall.rs  http_client.rs  lib.rs  main.rs  repl.rs  types.rs
crates/ironposh-client-tokio/tests/: command_latency_e2e.rs  command_matrix_e2e.rs  configuration_name_e2e.rs  disconnect_reconnect_e2e.rs  native_pty_matrix_e2e.rs  pty_cancel_then_next_e2e.rs  pty_ctrl_c_e2e.rs  pty_delayed_burst_e2e.rs  pty_error_stream_e2e.rs  pty_idle_ctrl_c_e2e.rs  pty_interactive_commands_e2e.rs  pty_large_output_e2e.rs  pty_mixed_streams_e2e.rs  pty_nested_scripts_e2e.rs  pty_prompt_ctrl_c_e2e.rs  pty_rapid_sequential_e2e.rs  pty_readhost_ctrl_c_race_e2e.rs  pty_real_server_additional_e2e.rs  pty_records_e2e.rs  pty_second_while_first_runs_e2e.rs  pty_session_cleanup_e2e.rs  pty_stress_terminal_e2e.rs  pty_tab_completion_e2e.rs  pty_terminal_hostcalls_matrix_e2e.rs  pty_terminating_error_e2e.rs  real_server_feature_e2e.rs  reattach_e2e.rs  tls_options.rs
crates/ironposh-client-tokio/tests/e2e/: auths.rs  clixml_primitives.rs  command_latency.rs  command_matrix.rs  configuration_name.rs  disconnect_reconnect.rs  main.rs  native_pty_matrix.rs  pty_ctrl_c.rs  pty_delayed_burst.rs  pty_error_stream.rs  pty_idle_ctrl_c.rs  pty_interactive_commands.rs  pty_large_output.rs  pty_mixed_streams.rs  pty_prompt_ctrl_c.rs  pty_rapid_sequential.rs  pty_real_server_additional.rs  pty_records.rs  pty_second_while_first_runs.rs  pty_session_cleanup.rs  pty_stress_terminal.rs  pty_tab_completion.rs  pty_terminal_hostcalls_matrix.rs  pty_terminating_error.rs  (+3 more)
crates/ironposh-psrp/: Cargo.toml
crates/ironposh-psrp/examples/: analyze.rs  defragment_multiple.rs
crates/ironposh-psrp/src/: completion.rs  cores.rs  lib.rs
crates/ironposh-psrp/tests/: test_fragmentation_edge_cases.rs  test_psrp_message_edge_cases.rs
crates/ironposh-test-support/: Cargo.toml
crates/ironposh-test-support/src/: e2e_pwsh_config.rs  fake_server.rs  lib.rs  native_pty_matrix.rs  pty_harness.rs  tls_listener.rs
crates/ironposh-web/: Cargo.toml  flattened_files.txt
crates/ironposh-web/src/: client.rs  conversions.rs  error.rs  hostcall.rs  http_client.rs  http_convert.rs  lib.rs  runner.rs  stream.rs  types.rs  websocket.rs  ws_http_decoder.rs
crates/ironposh-web/tests/: web.rs
crates/ironposh-winrm/: Cargo.toml
crates/ironposh-winrm/src/: lib.rs  macros.rs  test_macro.rs
crates/ironposh-winrm/tests/: test_connect_request.rs  test_disconnect_request.rs  test_initial_build_request.rs  test_initial_deserialize_request.rs  test_malformed_soap.rs  test_operation_timeout_fractional.rs  test_parse_error_response.rs  test_parse_receive_response.rs  test_parse_resource_created.rs  test_receive_fix.rs  test_send_multiple_fragments.rs
crates/ironposh-xml/: Cargo.toml
crates/ironposh-xml/examples/: build.rs  parse.rs
crates/ironposh-xml/src/: lib.rs  mapping.rs
crates/powershell-async/: Cargo.toml
crates/powershell-async/src/: lib.rs  notify_map.rs  remote_client.rs
crates/powershell-sync-client/: Cargo.toml
crates/powershell-sync-client/src/: config.rs  connection.rs  main.rs  user_input.rs
crates/protocol-powershell-remoting/: Cargo.toml
crates/protocol-powershell-remoting/examples/: analyze.rs  decode_powershell.rs  defragment_multiple.rs  first_message.rs  fragmenter_demo.rs  init_runspacepool_demo.rs  ps_objects_demo.rs
crates/protocol-powershell-remoting/src/: cores.rs  fragmenter.rs  headers.rs  lib.rs
crates/protocol-winrm/: Cargo.toml  expand_header.rs
crates/protocol-winrm/examples/: build.rs  deserde.rs
crates/protocol-winrm/src/: lib.rs  macros.rs  test_macro.rs
crates/protocol-winrm/tests/: test_initial_build_request.rs  test_initial_deserialize_request.rs  test_parse_receive_response.rs  test_parse_resource_created.rs
crates/pwsh-core/: Cargo.toml
crates/pwsh-core/examples/: README.md  connect.rs  connect_interactive.rs
crates/pwsh-core/src/: lib.rs  pipeline.rs  powershell.rs
(+371 files in other folders)
