[workspace]
resolver = "3"
# Define the members of the workspace. Currently, it includes the main crate.
members = ["crates/*"]

[patch.crates-io]
sspi = { path = "D:/sspi-rs" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
#cargo = { level = "warn", priority = -1 }


# pedantic exceptions
doc_markdown = { level = "allow" }  # false positives for the word `PowerShell`
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }

cast_lossless = { level = "allow" }
cast_possible_truncation = { level = "allow" }
cast_possible_wrap = { level = "allow" }
cast_sign_loss = { level = "allow" }

must_use_candidate = { level = "allow" }
return_self_not_must_use = { level = "allow" }
unreadable_literal = { level = "allow" }
used_underscore_binding = { level = "allow" }
wildcard_imports = { level = "allow" }

#nursery exceptions
missing_const_for_fn = { level = "allow" }
