[package]
name = "ironposh-async"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-stream = "0.3.6"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await", "std"] }
ironposh-client-core = { version = "0.1.0", path = "../ironposh-client-core" }
tracing = "0.1"
uuid = "1.0"
