[package]
name = "ironposh-client-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.6.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
ironposh-winrm = { path = "../ironposh-winrm" }
ironposh-psrp = { path = "../ironposh-psrp" }
ironposh-xml = { path = "../ironposh-xml" }
typed-builder = "0.21.0"
base64 = "0.22.1"
tracing = "0.1.41"
url = "2.5.7"
whoami = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
sspi = { version = "0.18", features = ["ring"] }

[dev-dependencies]
ureq = "2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"

[lints]
workspace = true
