[[bin]]
name = "ironposh-client-sync"
path = "src/main.rs"

[package]
name = "ironposh-client-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
ironposh-client-core = { version = "0.1.0", path = "../ironposh-client-core" }
ironposh-psrp = { version = "0.1.0", path = "../ironposh-psrp" }
ureq = "2.10"
anyhow = "1.0"
regex = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.18.0", features = ["v4"] }
tracing-appender = "0.2"
tracing-log = "0.2"
byteorder = "1.5.0"
whoami = "1.6.1"
crossterm = "0.29.0"

