[package]
name = "ironposh-client-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
powershell-async = { version = "0.1.0", path = "../powershell-async" }
pwsh-core = { version = "0.1.0", path = "../pwsh-core" }
protocol-powershell-remoting = { version = "0.1.0", path = "../protocol-powershell-remoting" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.18.0", features = ["v4"] }
futures = "0.3"
