[package]
name = "ironposh-client-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
ironposh-async = { version = "0.1.0", path = "../ironposh-async" }
ironposh-client-core = { version = "0.1.0", path = "../ironposh-client-core" }
ironposh-psrp = { version = "0.1.0", path = "../ironposh-psrp" }
ironposh-terminal = { version = "0.1.0", path = "../ironposh-terminal" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
uuid = { version = "1.18.0", features = ["v4"] }
futures = "0.3"
crossbeam-channel = "0.5"
whoami = "1.5"
crossterm = "0.29"
vt100 = "0.16"

[lints]
workspace = true
