[package]
name = "ironposh-web"
version = "0.1.0"
authors = ["irving ou <jou@devolutions.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1" }
tsify = { version = "0.5.5", features = ["js"] }
serde = { version = "1.0.227", features = ["derive"] }
wasm-bindgen-futures = "0.4.54"
ironposh-async = { path = "../ironposh-async" }
ironposh-client-core = { path = "../ironposh-client-core" }
js-sys = "0.3.81"
web-sys = "0.3.81"
tracing-wasm = "0.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
