[[bin]]
name = "powershell-sync-client"
path = "src/main.rs"

[package]
name = "powershell-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
pwsh-core = { version = "0.1.0", path = "../pwsh-core" }
protocol-powershell-remoting = { version = "0.1.0", path = "../protocol-powershell-remoting" }
ureq = "2.10"
anyhow = "1.0"
regex = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
