[package]
name = "protocol-powershell-remoting"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
quick-xml = { version = "0.38.0", features = [
    "serde",
    "serde-types",
    "serialize",
] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
typed-builder = "0.21.0"
uuid = { version = "1.17.0", features = ["v4"] }
xml = { version = "0.1.0", path = "../xml" }

[dev-dependencies]
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
