[package]
name = "protocol-winrm"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["http2"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typed-builder = "0.21.0"
xml = { path = "../xml" }
protocol-macros = { path = "../protocol-macros" }
byteorder = "1.5.0"
base64 = "0.22.1"
paste = "1.0.15"
