[package]
name = "pwsh-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.6.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
protocol-winrm = {path = "../protocol-winrm"}
protocol-powershell-remoting = {path = "../protocol-powershell-remoting"}
xml = { path = "../xml" }
typed-builder = "0.21.0"
base64 = "0.22.1"
tracing = "0.1.41"


[dev-dependencies]
ureq = "2"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"